[package]
name = "teapot"
version = "0.1.0"
edition = "2021"
keywords = ["http", "server"]

[dependencies]

# hyper
hyper = { version = "1", features = ["http1", "server"] }
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["http1", "tokio"] }

log = "0.4"

[dev-dependencies]
simplelog = "0.12"